crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_handle_dangerously_set_inner_html.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
const Cmp = component$(() => {
  const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
  return (
    <div>
      <div>
        <span id="first" dangerouslySetInnerHTML="vanilla HTML here" />
      </div>
      <div>
        <span id="second" dangerouslySetInnerHTML="<h1>I'm an h1!</h1>" class="after" />
      </div>
      <div>
        <span id="third" dangerouslySetInnerHTML={htmlSignal.value} class="after" />
        <button
          onClick$={() => (htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>")}
        ></button>
      </div>
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_XXXXXXXXXXXX");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Cmp_component_XXXXXXXXXXXX"));
=== test.tsx_Cmp_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX");
export const Cmp_component_XXXXXXXXXXXX = () => {
  const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted(
        "div",
        null,
        null,
        /*#__PURE__*/ _jsxSorted(
          "span",
          null,
          {
            id: "first",
            dangerouslySetInnerHTML: "vanilla HTML here",
          },
          null,
          3,
          null,
        ),
        3,
        null,
      ),
      /*#__PURE__*/ _jsxSorted(
        "div",
        null,
        null,
        /*#__PURE__*/ _jsxSorted(
          "span",
          null,
          {
            id: "second",
            dangerouslySetInnerHTML: "<h1>I'm an h1!</h1>",
            class: "after",
          },
          null,
          3,
          null,
        ),
        3,
        null,
      ),
      /*#__PURE__*/ _jsxSorted(
        "div",
        null,
        null,
        [
          /*#__PURE__*/ _jsxSorted(
            "span",
            null,
            {
              id: "third",
              dangerouslySetInnerHTML: _wrapProp(htmlSignal),
              class: "after",
            },
            null,
            3,
            null,
          ),
          /*#__PURE__*/ _jsxSorted(
            "button",
            null,
            {
              "q-e:click": /*#__PURE__*/ qrl(
                i_XXXXXXXXXXXX,
                "Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX",
                [htmlSignal],
              ),
            },
            null,
            3,
            null,
          ),
        ],
        3,
        null,
      ),
    ],
    3,
    "u6_0",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
=== test.tsx_Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX = () => {
  const htmlSignal = _captures[0];
  return (htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>");
};
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_div_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_div_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "htmlSignal"
  ]
}
*/
== DIAGNOSTICS ===

[]
