crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_ignore_null_inlined_qrl.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { inlinedQrl } from "@qwik.dev/core";

const foo = inlinedQrl(null, "some_hash");

============================= test.js ==
import { inlinedQrl } from "@qwik.dev/core";
inlinedQrl(null, "some_hash");
== DIAGNOSTICS ==

[]
