crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_merge_attributes_with_spread_props_before_and_after.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export default component$((props) => {
  return <div {...props} class={[props.class, "component"]} {...props} />;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
const _hf0 = (p0) => [p0.class, "component"];
const _hf0_str = '[p0.class,"component"]';
export const test_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSplit(
    "div",
    {
      ..._getVarProps(props),
      ..._getConstProps(props),
      class: _fnSignal(_hf0, [props], _hf0_str),
      ..._getVarProps(props),
    },
    _getConstProps(props),
    null,
    0,
    "u6_0",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ===

[]
